# IT-Planet_Pro_SberLinux

./: README.md
.unimplemented fuse-vfs/: Cargo.toml  Justfile  README.md  TODO.md
.unimplemented fuse-vfs/src/: fs.rs  lib.rs  main.rs
.unimplemented fuse-vfs/tests/: opendir.c  opendir.c.out
backups/: Cargo.toml  Dockerfile  README.md  build.Dockerfile  docker-compose.yaml
backups/src/: backup.rs  config.rs  lib.rs  main.rs  scheduler.rs
backups/tests/: backup.rs
conf-files-vcs/: .dockerignore  Cargo.toml  Dockerfile  README.md
conf-files-vcs/src/: config.rs  lib.rs  main.rs  repo.rs  watch.rs
