[package]
name = "backups"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
clokwerk = "0.4.0"

serde = "1.0.215"
serde_json = "1.0.132"
serde_yaml = "0.9.34"
serde_derive = "1.0.215"

clap = "4.5.21"
clap_derive = "4.5.18"

tracing-subscriber = "0.3.18"
tracing = "0.1.40"
anyhow = "1.0.93"
