[package]
name = "backups"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "time"] }
clokwerk = "0.4.0"

serde = "1.0.215"
serde_json = "1.0.132"
serde_yml = "0.0.12"
serde_derive = "1.0.215"

clap = "4.5.21"
clap_derive = "4.5.18"

tracing-subscriber = "0.3.18"
tracing = "0.1.40"
anyhow = "1.0.93"
color-eyre = "0.6.3"
chrono = "0.4.38"
tempfile = "3.14.0"

[dev-dependencies]
tempfile = "3.14.0"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
incremental = false
panic = "abort"
