[package]
name = "conf-files-vcs"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "sync"] }
git2 = { version = "0.19.0", default-features = false }

anyhow = "1.0.93"

clap = "4.5.21"
clap_derive = "4.5.18"
glob = "0.3.1"
glob-match = "0.2.1"
notify = "7.0.0"
notify-debouncer-full = "0.4.0"

serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.132"
serde_yml = "0.0.12"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dunce = "1.0.5"
whoami = { version = "1.5.2", default-features = false }
owo-colors = "4.1.0"
